--- a/css/style.css
+++ b/css/style.css
@@ -1566,6 +1566,12 @@ body {
   padding: 30px 26px 20px 30px;
 }
 
+@media (max-width: 420px) {
+  .item-recepies__card {
+    padding: 10px;
+  }
+}
+
 .item-recepies__card:hover {
   color: #000000;
   background: #34C759;
